Fix: Add postinstall script to rebuild Tailwind native bindings

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "postinstall": "npm rebuild @tailwindcss/oxide || true",
     "build": "next build",
     "dev": "next dev",
     "lint": "eslint .",
